crates/tmc-langs-cli/tests/snapshots/integration__prepare_submission_tar@make__failing-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/make/failing-exercise
---
- Makefile
- src
- src/Makefile
- src/main
- src/main.c
- src/source.c
- src/source.h
- test
- test/Makefile
- test/checkhelp.c
- test/test
- test/test_source.c
- test/tmc-check.c
- test/tmc-check.h

