crates/tmc-langs-cli/tests/snapshots/integration__prepare_submission_tar@make__valgrind-failing-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/make/valgrind-failing-exercise
---
- Makefile
- src
- src/Makefile
- src/main
- src/main.c
- src/source.c
- src/source.h
- test
- test/Makefile
- test/checkhelp.c
- test/test
- test/test_source.c
- test/tmc-check.c
- test/tmc-check.h
- test/tmc_available_points.txt
- test/tmc_test_results.xml

