crates/tmc-langs-cli/tests/snapshots/integration__prepare_submission_tar@make__valgrind-failing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/make/valgrind-failing-exercise
---
output-kind: output-data
status: finished
message: prepared submission for [PATH] at [PATH]
result: executed-command
data:
  output-data-kind: submission-sandbox
  output-data: eu.gcr.io/moocfi-public/tmc-sandbox-make:latest

